--- a/css/redox.css
+++ b/css/redox.css
@@ -4,6 +4,16 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
  */
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@font-face{
+  font-family: "Open Sans Bold";
+  src: url('/assets/fonts/OpenSans-Bold.ttf');
+}
+@font-face{
+  font-family: "Open Sans Light";
+  src: url('/assets/fonts/OpenSans-Light.ttf');
+}
+
 body {
   overflow-x: hidden;
   font-family: 'Raleway', Arial, sans-serif;
@@ -32,7 +42,7 @@ h4,
 h5,
 h6 {
   font-weight: 700;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'Open Sans Bold', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section {
@@ -49,7 +59,7 @@ section h3.section-subheading {
   font-size: 16px;
   font-weight: 400;
   text-transform: none;
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: 'Open Sans Bold', Arial, sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -64,7 +74,7 @@ section h3.section-subheading {
 
 
 .btn {
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'Open Sans Bold', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-weight: 700;
 }
 
@@ -239,7 +249,7 @@ header.masthead .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
   font-weight: 200;
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Open Sans Light', Arial, sans-serif;
 }
 
 header.masthead .intro-text .intro-heading {
@@ -248,7 +258,7 @@ header.masthead .intro-text .intro-heading {
   line-height: 50px;
   margin-top: 25px;
   margin-bottom: 0;
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Open Sans Bold', Arial, sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -259,7 +269,7 @@ header.masthead .intro-text .intro-heading {
     font-size: 40px;
     line-height: 40px;
     font-weight: 300;
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: 'Open Sans Light', Arial, sans-serif;
   }
   header.masthead .intro-text .intro-heading {
     font-size: 75px;
@@ -267,7 +277,7 @@ header.masthead .intro-text .intro-heading {
     line-height: 75px;
     margin-top: 10px;
     margin-bottom: 0;
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: 'Open Sans Bold', Arial, sans-serif;
   }
 }
 
