--- a/blog/layout/navbar.html
+++ b/blog/layout/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.php">Le blog de Mikaël</a>
+      <a class="navbar-brand" href="/blog/">Le blog de Mikaël</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -8,16 +8,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.php">Accueil</a>
+            <a class="nav-link" href="/blog/">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.php">À propos</a>
+            <a class="nav-link" href="/blog/about">À propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="posts.php">Tous les articles</a>
+            <a class="nav-link" href="/blog/all-posts">Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.php">Contact</a>
+            <a class="nav-link" href="/blog/contact">Contact</a>
           </li>
         </ul>
       </div>
