--- a/blog/layout/navbar.html
+++ b/blog/layout/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="/blog/"><img src="./img/logo-redox.svg" alt="Logo" id="logoBlog">Le blog de Mikaël</a>
+      <a class="navbar-brand" href="/blog/"><img src="/blog/img/logo-redox.svg" alt="Logo" id="logoBlog">Le blog de Mikaël</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
