--- a/layout/navbar.html
+++ b/layout/navbar.html
@@ -1,29 +1,31 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="/#page-top">Redox Prod</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav text-uppercase ml-auto">
-        <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#about">à propos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#services">nos services</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#team">L'agence</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/nos-projets.php">Nos projets</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/nous-contacter.php">Contact</a>
-        </li>
-        </ul>
-    </div>
+        <a class="navbar-brand js-scroll-trigger" href="/#page-top">Redox Prod</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+            aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav text-uppercase ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#about">à propos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#services">nos services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#team">L'agence</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/nos-projets.php">Nos projets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/nous-contacter.php">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
